// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable-ColumnsSetting render icon popover ui snap when click icon setting render popover cont has all column when click icon setting 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-table-setting-namespace ant-popover-open basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 8px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <svg
            class="custom-icon custom-icon-setting"
            height="11"
            viewBox="0 0 13 11"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.167 8.5H4.25v1.167H.167zm0-4.083h5.25v1.166H.167zm0-4.084h11.666V1.5H.167zM11.06 5.598l.674-.228.584 1.01-.535.47c.067.319.067.648 0 .967l.535.47-.584 1.01-.674-.228c-.24.216-.524.382-.837.484l-.14.697H8.917l-.14-.698a2.3 2.3 0 0 1-.837-.484l-.674.229-.583-1.01.534-.47a2.3 2.3 0 0 1 0-.967l-.534-.47.583-1.01.674.228c.24-.216.524-.382.837-.484l.14-.697h1.166l.14.697c.313.102.598.269.837.485zM9.5 8.5a1.167 1.167 0 1 0 0-2.333 1.167 1.167 0 0 0 0 2.333"
            />
          </svg>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          表格设置
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            class="custom-icon custom-icon-arrow-up"
            color="currentColor"
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div>
    <div
      class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big actiontech-setting-button-overlay-namespace ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-45kc3h"
            >
              <div
                class="actiontech-table-setting-fixed-left"
              >
                <div
                  class="actiontech-table-setting-fixed-title"
                >
                  固定在左侧
                </div>
                <div
                  aria-describedby="DndDescribedBy-1"
                  aria-disabled="false"
                  aria-roledescription="sortable"
                  class="columns-setting-item-wrapper"
                  role="button"
                  style="cursor: move;"
                  tabindex="0"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.667 4.667a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4.333a1 1 0 1 0 0-2 1 1 0 0 0 0 2m1 3.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3.666-7.666a1 1 0 1 0 0-2 1 1 0 0 0 0 2m1 3.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0m-1 5.333a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                    />
                  </svg>
                  <div
                    class="columns-setting-item"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          checked=""
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <div
                          style="width: 90px;"
                        >
                          <div
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line columns-setting-item-label margin-bottom-0"
                          >
                            工单号
                          </div>
                        </div>
                      </span>
                    </label>
                  </div>
                  <div
                    class="fixed-options"
                  >
                    <span>
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-middle"
                            class="anticon anticon-vertical-align-middle fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-middle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 474H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zm-353.6-74.7c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H550V104c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v156h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.6zm11.4 225.4a7.14 7.14 0 00-11.3 0L405.6 752.3a7.23 7.23 0 005.7 11.7H474v156c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V764h62.8c6 0 9.4-7 5.7-11.7L517.7 624.7z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      hidden=""
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-top"
                            class="anticon anticon-vertical-align-top fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-top"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span>
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-bottom"
                            class="anticon anticon-vertical-align-bottom fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-bottom"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 780H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM505.7 669a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V176c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="actiontech-table-setting-not-fixed"
              >
                <div
                  class="actiontech-table-setting-fixed-title"
                >
                  不固定
                </div>
                <div
                  aria-describedby="DndDescribedBy-1"
                  aria-disabled="false"
                  aria-roledescription="sortable"
                  class="columns-setting-item-wrapper"
                  role="button"
                  style="cursor: move;"
                  tabindex="0"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.667 4.667a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4.333a1 1 0 1 0 0-2 1 1 0 0 0 0 2m1 3.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3.666-7.666a1 1 0 1 0 0-2 1 1 0 0 0 0 2m1 3.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0m-1 5.333a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                    />
                  </svg>
                  <div
                    class="columns-setting-item"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          checked=""
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <div
                          style="width: 90px;"
                        >
                          <div
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line columns-setting-item-label margin-bottom-0"
                          >
                            创建时间
                          </div>
                        </div>
                      </span>
                    </label>
                  </div>
                  <div
                    class="fixed-options"
                  >
                    <span
                      hidden=""
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-middle"
                            class="anticon anticon-vertical-align-middle fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-middle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 474H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zm-353.6-74.7c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H550V104c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v156h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.6zm11.4 225.4a7.14 7.14 0 00-11.3 0L405.6 752.3a7.23 7.23 0 005.7 11.7H474v156c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V764h62.8c6 0 9.4-7 5.7-11.7L517.7 624.7z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span>
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-top"
                            class="anticon anticon-vertical-align-top fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-top"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span>
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-bottom"
                            class="anticon anticon-vertical-align-bottom fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-bottom"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 780H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM505.7 669a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V176c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="actiontech-table-setting-fixed-right"
              >
                <div
                  class="actiontech-table-setting-fixed-title"
                >
                  固定在右侧
                </div>
                <div
                  aria-describedby="DndDescribedBy-1"
                  aria-disabled="false"
                  aria-roledescription="sortable"
                  class="columns-setting-item-wrapper"
                  role="button"
                  style="cursor: move;"
                  tabindex="0"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.667 4.667a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4.333a1 1 0 1 0 0-2 1 1 0 0 0 0 2m1 3.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3.666-7.666a1 1 0 1 0 0-2 1 1 0 0 0 0 2m1 3.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0m-1 5.333a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                    />
                  </svg>
                  <div
                    class="columns-setting-item"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          checked=""
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <div
                          style="width: 90px;"
                        >
                          <div
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line columns-setting-item-label margin-bottom-0"
                          >
                            工单描述
                          </div>
                        </div>
                      </span>
                    </label>
                  </div>
                  <div
                    class="fixed-options"
                  >
                    <span>
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-middle"
                            class="anticon anticon-vertical-align-middle fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-middle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 474H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zm-353.6-74.7c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H550V104c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v156h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.6zm11.4 225.4a7.14 7.14 0 00-11.3 0L405.6 752.3a7.23 7.23 0 005.7 11.7H474v156c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V764h62.8c6 0 9.4-7 5.7-11.7L517.7 624.7z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span>
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-top"
                            class="anticon anticon-vertical-align-top fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-top"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      hidden=""
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            aria-label="vertical-align-bottom"
                            class="anticon anticon-vertical-align-bottom fixed-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="vertical-align-bottom"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M859.9 780H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM505.7 669a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V176c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                id="DndDescribedBy-1"
                style="display: none;"
              >
                
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
              </div>
              <div
                aria-atomic="true"
                aria-live="assertive"
                id="DndLiveRegion-1"
                role="status"
                style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-ColumnsSetting render icon setting snap when in diff scene render icon setting when default scene 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-table-setting-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 8px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <svg
            class="custom-icon custom-icon-setting"
            height="11"
            viewBox="0 0 13 11"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.167 8.5H4.25v1.167H.167zm0-4.083h5.25v1.166H.167zm0-4.084h11.666V1.5H.167zM11.06 5.598l.674-.228.584 1.01-.535.47c.067.319.067.648 0 .967l.535.47-.584 1.01-.674-.228c-.24.216-.524.382-.837.484l-.14.697H8.917l-.14-.698a2.3 2.3 0 0 1-.837-.484l-.674.229-.583-1.01.534-.47a2.3 2.3 0 0 1 0-.967l-.534-.47.583-1.01.674.228c.24-.216.524-.382.837-.484l.14-.697h1.166l.14.697c.313.102.598.269.837.485zM9.5 8.5a1.167 1.167 0 1 0 0-2.333 1.167 1.167 0 0 0 0 2.333"
            />
          </svg>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          表格设置
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            class="custom-icon custom-icon-arrow-down"
            color="currentColor"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-ColumnsSetting render icon setting snap when in diff scene render popover cont empty when click icon setting 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-table-setting-namespace ant-popover-open basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 8px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <svg
            class="custom-icon custom-icon-setting"
            height="11"
            viewBox="0 0 13 11"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.167 8.5H4.25v1.167H.167zm0-4.083h5.25v1.166H.167zm0-4.084h11.666V1.5H.167zM11.06 5.598l.674-.228.584 1.01-.535.47c.067.319.067.648 0 .967l.535.47-.584 1.01-.674-.228c-.24.216-.524.382-.837.484l-.14.697H8.917l-.14-.698a2.3 2.3 0 0 1-.837-.484l-.674.229-.583-1.01.534-.47a2.3 2.3 0 0 1 0-.967l-.534-.47.583-1.01.674.228c.24-.216.524-.382.837-.484l.14-.697h1.166l.14.697c.313.102.598.269.837.485zM9.5 8.5a1.167 1.167 0 1 0 0-2.333 1.167 1.167 0 0 0 0 2.333"
            />
          </svg>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          表格设置
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            class="custom-icon custom-icon-arrow-up"
            color="currentColor"
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div>
    <div
      class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big actiontech-setting-button-overlay-namespace ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-45kc3h"
            >
              <div
                class="actiontech-table-setting-fixed-left"
                hidden=""
              >
                <div
                  class="actiontech-table-setting-fixed-title"
                >
                  固定在左侧
                </div>
              </div>
              <div
                class="actiontech-table-setting-not-fixed"
                hidden=""
              >
                <div
                  class="actiontech-table-setting-fixed-title"
                >
                  不固定
                </div>
              </div>
              <div
                class="actiontech-table-setting-fixed-right"
                hidden=""
              >
                <div
                  class="actiontech-table-setting-fixed-title"
                >
                  固定在右侧
                </div>
              </div>
              <div
                id="DndDescribedBy-0"
                style="display: none;"
              >
                
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
              </div>
              <div
                aria-atomic="true"
                aria-live="assertive"
                id="DndLiveRegion-0"
                role="status"
                style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
